# serializer version: 1
# name: test_smacross_backtest
  721
# ---
# name: test_smacross_backtest.1
  4889.3742
# ---
# name: test_smacross_backtest.10
  -0.0003
# ---
# name: test_smacross_backtest.2
  9778.7484
# ---
# name: test_smacross_backtest.3
  Timestamp('2024-09-16 00:39:22.500000')
# ---
# name: test_smacross_backtest.4
  Timedelta('1 days 00:56:15')
# ---
# name: test_smacross_backtest.5
  0.163628125
# ---
# name: test_smacross_backtest.6
  'cec0d147f563f25b6d3301fbb4a99d23333574240803387aff1229443cd42eee'
# ---
# name: test_smacross_backtest.7
  Timestamp('2024-09-16 00:39:22.500000')
# ---
# name: test_smacross_backtest.8
  16
# ---
# name: test_smacross_backtest.9
  -3.7118
# ---
# name: test_smacrossfuture_backtest
  721
# ---
# name: test_smacrossfuture_backtest.1
  -133.9234
# ---
# name: test_smacrossfuture_backtest.10
  nan
# ---
# name: test_smacrossfuture_backtest.2
  60.8903
# ---
# name: test_smacrossfuture_backtest.3
  Timestamp('2024-09-16 05:46:40')
# ---
# name: test_smacrossfuture_backtest.4
  Timedelta('28 days 10:00:00')
# ---
# name: test_smacrossfuture_backtest.5
  0.006333333333333334
# ---
# name: test_smacrossfuture_backtest.6
  '106db7c6c6ad9441cad6f3cdeb0225e2cef445187885d1ec09af8b0f4b6279a0'
# ---
# name: test_smacrossfuture_backtest.7
  Timestamp('2024-09-16 05:46:40')
# ---
# name: test_smacrossfuture_backtest.8
  1
# ---
# name: test_smacrossfuture_backtest.9
  -2.3714
# ---
